# telegram-bot-server

./: CMakeLists.txt  README.md
td/: CMakeLists.txt  src.ps1  src.sh
td/benchmark/: CMakeLists.txt
td/td/telegram/: Td.cpp
td/td/telegram/files/: FileLoadManager.cpp  FileManager.cpp  ResourceManager.cpp
td/tdcpr/: CMakeLists.txt
td/tdcpr/td/cpr/: api.h  auth.cpp  bearer.cpp  body.h  callback.h  connect_timeout.h  cookies.cpp  cookies.h  cpr.h  cprtypes.cpp  curl_container.cpp  curl_container.h  curlholder.cpp  curlholder.h  digest.h  error.cpp  error.h  multipart.cpp  ntlm.h  parameters.cpp  parameters.h  payload.cpp  payload.h  proxies.cpp  response.cpp  response.h  session.cpp  session.h  timeout.cpp  unix_socket.cpp  user_agent.h  util.cpp  util.h
td/tddb/: CMakeLists.txt
td/tdnet/: CMakeLists.txt
td/test/: CMakeLists.txt
telegram-bot-api/: Client.cpp  Client.h  ClientParameters.h  telegram-bot-api.cpp
